Fixes spacing on small screens

--- a/src/layout/layout.module.css
+++ b/src/layout/layout.module.css
@@ -68,7 +68,7 @@
 .footer__inner {
   max-width: 50rem;
   margin: 0 auto;
-  padding: 5rem 1.2rem;
+  padding: 5.6rem 1.2rem;
 
   display: flex;
   justify-content: space-between;
@@ -77,9 +77,16 @@
 .footer__item:nth-child(1) {
   margin-top: 13rem;
 }
+
 .footer__item:nth-child(2) {
   margin-top: 8rem;
 }
+@media (max-width: 388px) {
+  .footer__item:nth-child(2) {
+    margin-top: 2.4rem;
+  }
+}
+
 .footer__item:nth-child(3) {
   margin-top: 2.4rem;
 }
